--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <body>
         <h1>Hello, World Wide Web 🌍</h1>
 
+        <h2>People</h2>
+
+        <form>
+            <label for="num-input">Number of Folks:</label>
+            <input id="num-input" type="number" min="1" value="1" />
+
+            <button type="submit">Fetch some Folks!</button>
+        </form>
+
+        <ul id="people-list"></ul>
         <script src="./app.js"></script>
     </body>
 </html>
